Replaced PetalGlyph font with svg logo. Fixed alignment error with mobil nav

--- a/css/calyx.css
+++ b/css/calyx.css
@@ -135,6 +135,7 @@ li.menu-item a {
     position: absolute;
     width: 100%;
     left: 0;
+    top: 70px;
   }
   ul.menu {
     display: none;
