--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,3 @@
-@font-face {
-  font-family: 'petalglyphregular';
-  src: url('/fonts/petalglyphv1.5-webfont.woff2') format('woff2'),
-       url('/fonts/petalglyphv1.5-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-.brand-text {
-  color: #5ebc64;
-  font-family: 'petalglyphregular', Arial, sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 2.65em;
-  line-height: 70px;
-}
-
 /* Navigation */
 li.menu-item {
   color: #5ebc64;
@@ -27,4 +10,8 @@ li.menu-item a:visited {
 }
 li.menu-item a:hover {
   color: #ffffff;
+}
+.img-brand {
+  max-width: 7.25em;
+  margin-top: 0.75em;
 }
